--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,6 @@ django-facebook==6.0.3
 django-filter==1.0.4
 django-jsonfield==1.0.1
 django-jwt-auth==0.0.2
-django-notify-x==0.1.9
 django-oauth-toolkit==1.0.0
 django-postgreconnect==0.2
 django-ratelimit==1.1.0
@@ -115,6 +114,7 @@ ply==3.10
 priority==1.3.0
 protobuf==3.3.0
 psycopg2==2.7.3.2
+psycopg2-binary==2.8.3
 py==1.4.34
 Py-Authorize==1.4.0.0
 pyasn1==0.4.2
@@ -162,6 +162,7 @@ Sphinx==1.6.5
 sphinx-rtd-theme==0.2.4
 sphinxcontrib-websupport==1.0.1
 splinter==0.7.7
+sqlparse==0.3.0
 Theano==0.9.0
 tox==2.9.1
 translationstring==1.3
